Improved Variable Widgets
* Reworked the way widgets are disabled when opening dropdowns or sub-editors to be more reliable

* Added LabeledDropdownWidget, which allows the creation of a button that will open a dropdown to choice a value

* This makes it so the EnumWidget only has to define the options list of the LabeledDropdownWidget

* Added methods for iterating overlays and elements

* Improved WidgetList to respect the active and visible flags of itself and its children